[gd_scene load_steps=4 format=3 uid="uid://dqaocogc8n1ft"]

[ext_resource type="Script" uid="uid://mohhgcefjp25" path="res://scripts/ui/TeamSlot.gd" id="1_63la3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emyqs"]
bg_color = Color(0.15, 0.15, 0.25, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a17kb"]
bg_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="TeamSlot" type="PanelContainer"]
custom_minimum_size = Vector2(140, 200)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_emyqs")
script = ExtResource("1_63la3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LeaderBadge" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "★ 隊長"
horizontal_alignment = 1

[node name="CardSprite" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="CardTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/CardSprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ElementLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "空位"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1

[node name="RemoveButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_a17kb")
text = "移除"
